# noted_backend

./: .gitignore  Procfile  makefile  pyproject.toml  vercel.json
noted/: __init__.py
noted.egg-info/: PKG-INFO  SOURCES.txt
noted/api/: __init__.py  audio.py  main.py  test.py
noted/api/tmp/: test.py
noted/model/: __init__.py  concise_prompt.txt  elaborate_prompt.txt  main.py
