[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noted"
version = "1.0.0"
dependencies = [
    "Flask",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests",
]
requires-python = ">=3.10"

[tool.pylint."messages control"]
disable = ["cyclic-import"]