[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noted"
version = "1.0.0"
dependencies = [
    "flask",
    "flask-cors",
    "google-generativeai",
    "python-dotenv",
    "gunicorn",
]
requires-python = ">=3.9"

[tool.pylint."messages control"]
disable = ["cyclic-import"]